--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: hongshengjie's blog
+subtitle: '欲多则心散，心散则志衰'
 description: ''
 keywords:
-author: John Doe
+author: hongshengjie
 language: en
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://hongshengjie.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
